--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 * add unit tests (minitest from Ruby 1.9)
-* clean up path stuff from the top of the "engine" script. 
 * add an inventory in the game. 
-* add the ability to create and link up worlds.
-* add readline support 
+* add the ability to create and link up worlds. (loading model, not really applicable yet)
+* add NPCs
+* add a magic system
