Fleshed out a little more of the interior of the house. Put a letter on the main desk in the study.
Now for implementing inventory and some unit tests! :)

--- a/TODO
+++ b/TODO
@@ -3,3 +3,4 @@
 * add the ability to create and link up worlds. (loading model, not really applicable yet)
 * add NPCs
 * add a magic system
+* add a real grammar for parsing commands
